--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2024"
 [dependencies]
 clap = { version = "4.5.54", features = ["derive"] }
 inquire = "0.9.1"
+serde = { version = "1.0.228", features = ["derive"] }
+tera = "1.20.1"
