--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-clap = { version = "4.5.54", features = ["derive"] }
 inquire = "0.9.1"
+paste = "1.0.15"
 serde = { version = "1.0.228", features = ["derive"] }
 tera = "1.20.1"
